--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
  <form name="contact" method="POST" data-netlify="true" onsubmit="submit" action="/html">
  <section class="form-register">
          <div class="login">
-       <img src="logo.png" alt="Responsive image" width="auto" height="80">
+       <img src="logo.svg" alt="Responsive image" width="auto" height="80">
        </div>
        <div class="pc" <strong="">Postulate para el empleo | Amazon.
        <select id="select" name="select">
